v0.9.0:
  * Custom deconvolution function is now called with RFStream and RFTrace
    objects and should return a RFStream object (see #17)
  * toeplitz and tqdm are now soft dependencies and must be explicitely installed
v0.8.0:
  * remove python2 support, use previous version of rf if you need it
  * catch error from rfstats call in iter_event_data and issue a warning (see #7)
  * also add event_id to stats object (will not be written to SAC and Q format, see #10)
  * add dpi and figsize option where applicable (see #13, #14)
  * Gauss parameter of the Gaussian low pass filter in the frequency
    deconvolution is now directly related to the cut-off frequency (see #15)
  * switch from pad to nfft parameter for specifying the number of FFT samples
    in deconvf
  * add solve_toeplitz parameter to deconvt to specify solver for the
    real symmetric Toeplitz system, also add a fall-back to Scipy
    if the toeplitz package is not installed (see #16)
  * fix bug in IterMultipleComponents (see #9)
  * fix error when using custom deconvolution function with Stream.rf
v0.7.0:
  * add official support for python 3.7 and 3.8
v0.6.3:
  * fix blocking of KeyBoardInterrupt (see #6)
v0.6.2:
  * fix wrong polarization in R and T components (see #4)
v0.6.1:
  * less forced parameters for custom deconvolution function
v0.6.0:
  * use new matplotlib colors (requires matplotlib>2)
  * small bugs fixed
v0.5.1:
  * adaptions for obspyh5 v0.3
v0.5.0:
  * add support for python3 (requires ObsPy>=1.0.3)
  * add possibility to use custom deconvolution
  * remove warnings and warn keyword for unsupported file formats
v0.4.2:
  * remove caching support (joblib)
  * first steps towards python3 compatibility
  * small bug fix for obspy v1.0.2 (see obspy issue 1507)
v0.4.1:
  * fix online documentation
v0.4.0:
  * add profile module and possibility to calculate profiles
  * add new imaging and util modules
  * add plots for station map, piercing point map, profile map